# docx2html

./: .gitignore  LICENSE  README.md  convert.py  make_sample_docx.py  pyproject.toml  verify.py
fancydocx/: __init__.py  __main__.py  cli.py  color.py  core.py  fontmetrics.py  numbering.py  package.py  render.py  styles.py  theme.py
