[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fancydocx"
dynamic = ["version"]
description = "Convert fancy .docx files into a single self-contained HTML file. Pure Python, no LibreOffice."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Bilal Sharif", email = "bilalwork31@gmail.com" }]
keywords = ["docx", "html", "converter", "ooxml", "word", "resume", "document", "pure-python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Office/Business",
]
# The converter itself has ZERO runtime dependencies (standard library only).
dependencies = []

[project.optional-dependencies]
# Only needed for the verify.py measurement harness, not for conversion.
verify = ["Pillow>=9", "numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/bilalwork31-cyber/docx2html"
Repository = "https://github.com/bilalwork31-cyber/docx2html"
Issues = "https://github.com/bilalwork31-cyber/docx2html/issues"

[project.scripts]
fancydocx = "fancydocx.cli:main"

[tool.setuptools.dynamic]
version = { attr = "fancydocx.__version__" }

[tool.setuptools.packages.find]
# Ship only the package; keep dev scripts (convert.py, verify.py, ...) out of the wheel.
include = ["fancydocx*"]
